# ubx_std_sched

./: CMakeLists.txt
cmake/: ubx-std-sched-config.cmake.in
dummies/: receiver.c  receiver.h
models/: receiver.blx  sseq.blx  std_sched.pkg
modules/: dummies_module.c  dummies_module.h  schedmod_module.c  schedmod_module.h
src_bin/: sseq.c  sseq_bk.c
sseq/: sseq.c  sseq.c~  sseq.h  sseq.h~  sseq.usc  sseq.usc~
types/: ptrig_period.h  ptrig_tstat.h  seq_config.h  ubx_std_sched_types.c
